--- a/build
+++ b/build
@@ -1,6 +1,7 @@
 #!/bin/bash
 
 function begin_stage() {
+set -o xtrace
 	local stage_name=$1
 	local distfile_mask=$2
 
@@ -108,8 +109,8 @@ export MAKEOPTS="-j $CORE_COUNT"
 export TMP="$WORK"
 export TEMP="$WORK"
 export TMPDIR="$WORK"
-export PYTHON_CMD="python3.10"
-#export PYTHON_CMD="python3"
+#export PYTHON_CMD="python3.10"
+export PYTHON_CMD="python3"
 
 unset CC CXX
 if [[ -e "${ROOT}"/use_clang ]] ; then
@@ -435,26 +436,8 @@ if [[ $STAGE && $STAGE < $NEXT ]] ; then
     complete_stage $NEXT
 fi
 
-# STAGE 4.1 -- Embree
+# STAGE 4.1 -- Oidn
 NEXT=4.2
-if [[ $STAGE && $STAGE < $NEXT ]] ; then
-	begin_stage Embree embree-*.tar.gz
-
-	cp -v ${DIST}/embree-install.sh .
-
-    sleep 1
-    if ./embree-install.sh $TARGET ; then
-        echo " * Embree library and headers installed successfully"
-    else
-        echo " !!! Embree library and headers installation failed"
-        exit 1
-    fi
-
-	complete_stage $NEXT
-fi
-
-# STAGE 4.2 -- Oidn
-NEXT=4.3
 if [[ $STAGE && $STAGE < $NEXT ]] ; then
 	begin_stage Oidn oidn-*.tar.gz
 
@@ -470,6 +453,26 @@ if [[ $STAGE && $STAGE < $NEXT ]] ; then
 
 	complete_stage $NEXT
 fi
+
+# STAGE 4.2 -- Embree
+NEXT=4.3
+if [[ $STAGE && $STAGE < $NEXT ]] ; then
+	rm ${DIST}/embree-3.12.2.x86_64.linux.tar.gz 
+	begin_stage Embree embree-*.tar.gz
+
+	cp -v ${DIST}/embree-install.sh .
+
+    sleep 1
+    if ./embree-install.sh $TARGET ; then
+        echo " * Embree library and headers installed successfully"
+    else
+        echo " !!! Embree library and headers installation failed"
+        exit 1
+    fi
+
+	complete_stage $NEXT
+fi
+
 
 # STAGE 4.3 -- C-blosc
 NEXT=4.4
